# npm-dep-chek-rust

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
npmproject/: package-lock.json  package.json
npmproject/src/some_other/: somehelper.js
src/: cli.rs  dep_checker.rs  errors.rs  fs_helper.rs  main.rs
