[package]
name = "npm-dep-check-rust"
version = "0.1.0"
authors = ["SaiUmeshDhanewar"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.67"
snafu = "0.6.10"
regex = "1.5.4"
lazy_static = "1.4.0"
clap = "3.0.0-beta.2"
